--- a/sections/product-bundle.liquid
+++ b/sections/product-bundle.liquid
@@ -78,44 +78,26 @@
         </div>
   
         <!-- Options -->
-        <div class="mt-4 lg:mt-0 lg:row-span-3">
-          <h1 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-xl pb-0">Information</h1>
+        <div class=" mt-4 lg:mt-0 lg:row-span-3">
 
-          <h2 class="sr-only">Product information</h2>
-          <p id="bundle-total" class="text-lg text-gray-900 font-medium">Total: $0</p>
-  
           <!-- Reviews -->
       
-          <div>
+          <div class="bg-gray-100 p-3 mb-4">
             <h3 class="sr-only">Description</h3>
+            <h1 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-xl pb-0">Kit Contents</h1>
+
+              <h2 class="sr-only">Product information</h2>
   
             <div class="space-y-6">
               <span id="foo"></span>
-              <p class="text-base text-gray-900">
+              <p id="bundle-total" class="text-base font-medium pt-2 text-black">Total: $0</p>
 
-                Our Bigfastcar conversion kit makes it easy to put a T56 six speed manual transmission in your 1994 – 1996 Impala SS (see additional applications below). Our integrated clutch and brake pedal assembly fits right in place of your brake pedal assembly, and works with the Tilton Series 78 master cylinder.  To get you up and running quickly we offer a hydraulics package with all the parts you need to connect to your hydraulic release bearing or slave cylinder.  Our transmission crossmember accommodates either the first generation T56 or the current T56 Magnum. And our center console pieces complete the interior of your car, providing a factory look with a leather shift boot.
-
-                        Our complete kit is priced at $2,325.  If you don’t have an Impala SS center console, the price is $2,125.  Pedal assemblies are available alone for $949.  Further pricing and package details are below.
-
-                        Our pedal and crossmember have undergone finite element analysis (FEA), whereby professional engineers simulate real world and worst case scenarios on pressures and loads in order to identify weak points. We design our products to withstand extreme forces, and we test our parts on the track.  We proudly design and manufacture everything in the USA.
-
-                        To complete your conversion, we have two recommended packages, and we are happy to customize a package for your needs.
-
-                        Our kit works with the stock LT1 engine as well as the LS engine family and we have engineered packages to make it easy to install your 6 speed behind the engine of your choice.
-
-                        To purchase a kit, visit our shopping cart or contact us.
-
-                        Kit for Impala SS – $2,325
-
-                        Kit for all other B- and D-Bodies – Regular price $2,125 – the only difference is that this doesn’t include our custom designed console insert and shift boot
-
-                        Integrated clutch and brake pedal, and nothing else (patent pending) – $949. BBHP customers can upgrade their existing pedal at an additional $50 discount, to $899.
-
-                        Kits are now shipping.
-
-              </p>
+              
             </div>
           </div>
+          <button id="add-to-bundle" class="mb-8 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add Kit To Cart</button>
+
+          {{product.description}}
         </div>
   
         <div class="py-10 lg:pt-6 lg:pb-16 lg:col-start-1 lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
@@ -149,7 +131,7 @@
                     <hr class="w-full h-[2px] bg-gray-300 my-1"/>
                   </div>
                 {% elsif block.type == "featured_product" %}
-                  <div class="col-span-{{block.settings.column_span}} h-full flex flex-col">
+                  <div id="product-bundle-{{forloop.index0}}" class="col-span-{{block.settings.column_span}} h-full flex flex-col">
                     <!-- Active: "ring-2 ring-indigo-500" -->
                     <img
                     srcset="{%- if block.settings.bundle_product.featured_image.width >= 375 -%}{{ block.settings.bundle_product.featured_image | img_url: '375x' }} 375w,{%- endif -%}
@@ -159,16 +141,19 @@
                     sizes="100vw"
                     src="{{ block.settings.bundle_product.featured_image | img_url: '500x' }}"
                     loading="lazy"
-                    class="h-[200px] w-full object-cover rounded-md"
+                    class="h-[200px] w-full object-cover rounded-md product-bundle-image"
                     alt="{{ block.settings.bundle_product.featured_image.alt | escape }}"
                     width="{{ block.settings.bundle_product.featured_image.width }}"
                     height="{{ block.settings.bundle_product.featured_image.width | divided_by: block.settings.bundle_product.featured_image.aspect_ratio }}"
                   >
                 
                     
-                  <a href="{{block.settings.bundle_product.url}}"><p class="text-xs text-gray-500 my-2">{{block.settings.bundle_product.title}}</p></a>
+                  <a href="{{block.settings.bundle_product.url}}"><p class="product-bundle-title text-xs text-gray-500 my-2">{{block.settings.bundle_product.title}}</p></a>
                     {% if block.settings.bundle_product_collection != blank %}
-                    <button class="bundle_product_options text-xs text-right my-1 font-medium text-indigo-600 hover:text-indigo-500">Change Selection</button>
+                    <button index="{{forloop.index0}}" class="product-bundle-options text-xs text-right my-1 font-medium text-indigo-600 hover:text-indigo-500">Change Selection</button>
+                  
+                  {% render 'product-bundle-options', forloop: forloop.index0, collection: block.settings.bundle_product_collection %}
+
                   {% endif %}
                     
                     {% if block.settings.bundle_product.selected_or_first_available_variant.inventory_quantity <= 0 and block.settings.bundle_product.selected_or_first_available_variant.inventory_policy != "continue" %}
@@ -190,7 +175,6 @@
                 </fieldset>
               </div>
     
-              <button id="add-to-bundle" class="mt-10 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Add to bag</button>
             </product-bundle>
 
 
@@ -206,100 +190,7 @@
     </main>
  
   </div>
-    
-  <script>
-    
-    class ProductBundle extends HTMLElement {
-      constructor() {
-        super();
-      }
-    
-      connectedCallback() {
-        let selectedItems = [];
-        let totalPrice = 0;
-        let selectedProductNames = [];
 
-        function makeUL(array) {
-          // Create the list element:
-          var list = document.createElement('ul');
-
-          for (var i = 0; i < array.length; i++) {
-              // Create the list item:
-              var item = document.createElement('li');
-
-              // Set its contents:
-              item.appendChild(document.createTextNode(array[i]));
-
-              // Add it to the list:
-              list.appendChild(item);
-          }
-
-          // Finally, return the constructed list:
-          return list;
-      }
-
-      const selectAdd = (e) => {
-            let index = e.target.getAttribute('index');
-            let productId = e.target.getAttribute('product-id')
-            let productPrice = Number(e.target.getAttribute('product-price'));
-            let productName = e.target.getAttribute('product-title');
-
-            let arrayIndex = selectedItems.findIndex(selectedItems => selectedItems.id === Number(productId));
-            if (arrayIndex == -1) {
-              selectedItems.push({'id': Number(productId), 'quantity': 1});
-              selectedProductNames.push(productName)
-              totalPrice += productPrice
-              e.target.innerHTML = "Remove - $" + Number(e.target.getAttribute('product-price') / 100.00);
-              e.target.classList.add('bg-gray-800');
-              e.target.classList.remove('bg-primaryRed');
-              document.getElementById('foo').innerHTML = "";
-            } else {
-              selectedItems.splice(arrayIndex, 1);
-              selectedProductNames.splice(arrayIndex, 1)
-              totalPrice -= productPrice;
-              e.target.innerHTML = "Add - $" + Number(e.target.getAttribute('product-price') / 100.00);
-              e.target.classList.remove('bg-gray-800');
-              e.target.classList.add('bg-primaryRed');
-              document.getElementById('foo').innerHTML = "";
-            }
-            document.getElementById('foo').appendChild(makeUL(selectedProductNames));
-            document.getElementById('bundle-total').innerHTML = "Total: $" + (totalPrice / 100);
-           
-           //clear empty values
-      }
-
-      const addToCart = (selectedItems) => {
-          fetch('/cart/add.js', {
-          method: 'post',
-          headers: {
-            'Accept': 'application/json, text/plain, */*',
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ items: selectedItems})}).then(res => res.json()).then(res => location.href = "/cart");
-      }
-
-
-
-        this.addEventListener('click', function(e){
-          if (e.target.classList.contains('add-to-bundle')){
-            selectAdd(e);
-          }
-          if (e.target.id == "add-to-bundle") {
-            addToCart(selectedItems);
-           }  
-          if (e.target.classList.contains('bundle_product_options')) {
-            console.log('true');
-          }
-           
-        });
-
-    
-      }  
-      
-    }
-    
-    customElements.define('product-bundle', ProductBundle);
-    </script>
 
   {% schema %}
 {
